# L3DiskEx

./: BUILD.md  CMakeLists.txt  Makefile.linux  Makefile.macosx  Makefile.win  README.md  build_all.bat  build_all.sh  cp_exefile.bat  cp_exefile.sh  l3diskex.doxy  readme.txt
Eclipse/linux/l3diskex/: .cproject  .project
Eclipse/win/l3diskex/: .cproject  .project  post_build.sh  pre_build.sh
VC++2008/: l3diskex.vcproj  l3diskex.vsprops  post_build.bat
VC++2010/: l3diskex.props  l3diskex.vcxproj  l3diskex.vcxproj.filters  wxwidgets.props
VC++2013/: l3diskex.vcxproj  l3diskex.vcxproj.filters  wxwidgets.props
VC++2015/: l3diskex.vcxproj  l3diskex.vcxproj.filters  wxwidgets.props
VC++2017/: l3diskex.vcxproj
VC++2019/: l3diskex.vcxproj
VisualC/: l3diskex.props  l3diskex.vcproj  l3diskex.vcxproj  l3diskex.vcxproj.filters  post_build.bat
Xcode/l3diskex/l3diskex.xcodeproj/: project.pbxproj
data/: basic_types.xml  category_types.xml  char_codes.xml  disk_types.xml  file_types.xml
docs/: COPYRIGHT.txt  ChangeLog.txt  DiskBasicSpec.txt  Readme.txt
lang/ja/: l3diskex.mo  l3diskex.po
patch/: wxWidgets-3.2.4-osx_carbon.patch
src/: basiccommon.cpp  basiccommon.h  basicdir.cpp  basicdir.h  basicdiritem.cpp  basicdiritem.h  basicdiritem_cdos.cpp  basicdiritem_cdos.h  basicdiritem_cpm.cpp  basicdiritem_cpm.h  basicdiritem_dos80.cpp  basicdiritem_dos80.h  basicdiritem_falcom.cpp  basicdiritem_falcom.h  basicdiritem_fat8.cpp  basicdiritem_fat8.h  basicdiritem_flex.cpp  basicdiritem_flex.h  basicdiritem_fm.cpp  basicdiritem_fm.h  basicdiritem_fp.cpp  basicdiritem_fp.h  basicdiritem_frost.cpp  basicdiritem_frost.h  basicdiritem_hu68k.cpp  basicdiritem_hu68k.h  basicdiritem_l31s.cpp  basicdiritem_l31s.h  basicdiritem_l32d.cpp  basicdiritem_l32d.h  basicdiritem_losa.cpp  basicdiritem_losa.h  basicdiritem_magical.cpp  basicdiritem_magical.h  basicdiritem_mdos.cpp  basicdiritem_mdos.h  basicdiritem_msdos.cpp  basicdiritem_msdos.h  basicdiritem_msx.cpp  basicdiritem_msx.h  (+192 more)
src/basicfmt/: basiccategory.cpp  basiccategory.h  basiccommon.cpp  basiccommon.h  basicdir.cpp  basicdir.h  basicdiritem.cpp  basicdiritem.h  basicdiritem_amiga.cpp  basicdiritem_amiga.h  basicdiritem_apledos.cpp  basicdiritem_apledos.h  basicdiritem_c1541.cpp  basicdiritem_c1541.h  basicdiritem_cdos.cpp  basicdiritem_cdos.h  basicdiritem_cpm.cpp  basicdiritem_cpm.h  basicdiritem_dos80.cpp  basicdiritem_dos80.h  basicdiritem_falcom.cpp  basicdiritem_falcom.h  basicdiritem_fat8.cpp  basicdiritem_fat8.h  basicdiritem_flex.cpp  basicdiritem_flex.h  basicdiritem_fm.cpp  basicdiritem_fm.h  basicdiritem_fp.cpp  basicdiritem_fp.h  basicdiritem_frost.cpp  basicdiritem_frost.h  basicdiritem_hfs.cpp  basicdiritem_hfs.h  basicdiritem_hu68k.cpp  basicdiritem_hu68k.h  basicdiritem_l31s.cpp  basicdiritem_l31s.h  basicdiritem_l32d.cpp  basicdiritem_l32d.h  (+118 more)
src/diskimg/: disk2mgparser.cpp  disk2mgparser.h  diskadcparser.cpp  diskadcparser.h  diskcqmparser.cpp  diskcqmparser.h  diskd88.cpp  diskd88.h  diskd88creator.cpp  diskd88creator.h  diskd88parser.cpp  diskd88parser.h  diskd88writer.cpp  diskd88writer.h  diskdimparser.cpp  diskdimparser.h  diskdmkparser.cpp  diskdmkparser.h  diskdskparser.cpp  diskdskparser.h  diskfdiparser.cpp  diskfdiparser.h  diskg64parser.cpp  diskg64parser.h  diskhfeparser.cpp  diskhfeparser.h  diskimage.cpp  diskimage.h  diskimagecreator.cpp  diskimagecreator.h  diskimdparser.cpp  diskimdparser.h  diskjv3parser.cpp  diskjv3parser.h  diskparam.cpp  diskparam.h  diskparser.cpp  diskparser.h  diskplainparser.cpp  diskplainparser.h  (+14 more)
src/res/: Info.plist  fd_3inch_16.xpm  fd_5inch_16_1.xpm  fd_5inch_16_2.xpm  fd_5inch_16_add.xpm  fd_5inch_16_delete.xpm  fd_5inch_16_export.xpm  fd_5inch_16_import.xpm  fd_5inch_16_new.xpm  fd_5inch_16_open.xpm  fileicon_delete.xpm  fileicon_hidden.xpm  fileicon_normal.xpm  foldericon_close.xpm  foldericon_open.xpm  l3diskex.icns  l3diskex.rc  l3diskex.xpm  labelicon_normal.xpm  triangle_down.xpm  triangle_up.xpm
src/ui/: basicparambox.cpp  basicparambox.h  basicselbox.cpp  basicselbox.h  configbox.cpp  configbox.h  diskparambox.cpp  diskparambox.h  diskreplacebox.cpp  diskreplacebox.h  fileselbox.cpp  fileselbox.h  fontminibox.cpp  fontminibox.h  intnamebox.cpp  intnamebox.h  intnamevalid.cpp  intnamevalid.h  loggingbox.cpp  loggingbox.h  mydialog.cpp  mydialog.h  mymenu.cpp  mymenu.h  rawexpbox.cpp  rawexpbox.h  rawparambox.cpp  rawparambox.h  rawsectorbox.cpp  rawsectorbox.h  rawtrackbox.cpp  rawtrackbox.h  uibindump.cpp  uibindump.h  uicdlistctrl.cpp  uicdlistctrl.h  uicdtreectrl.cpp  uicdtreectrl.h  uiclistctrl.cpp  uiclistctrl.h  (+19 more)
